pnet_macros/tests/compile-fail/no_payload.stderr
error: #[packet]'s must contain a payload
  --> $DIR/no_payload.rs:13:1
   |
13 | #[packet] //~ ERROR: #[packet]'s must contain a payload
   | ^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
